...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/rules_icon"
            android:title="@string/menu_rules" />
        <item
            android:id="@+id/nav_scoreboard"
            android:icon="@drawable/scoreboard_icon"
            android:title="@string/menu_scoreboard" />
        <item
            android:id="@+id/nav_power_up"
            android:icon="@drawable/power_up_icon"
            android:title="@string/menu_shop" />
...
