...
    <string name="main_fragment_text">Main fragment</string>
    <string name="greeting_fragment_text">Greeting fragment</string>
    <string name="menu_maps">Map</string>
    <string name="menu_test">Test fragment</string>
    <string name="hello_placeholder">Hello</string>
    <string name="menu_rules">Rules</string>
    <string name="toolbar_action_logout">Log out</string>
    <string name="toolbar_action_invite">Invite a friend!</string>
    <string name="scoreboard_title">Scores</string>
    <string name="menu_scoreboard">Scoreboard</string>
    <string name="permission_required_toast">Precise location is required</string>
    <string name="permission_rationale_location">This app needs to be able to locate players in order to be playable. Please click OK to give access to your location. If you refuse, Campus Capture won\'t be playable and will close.</string>
    <string name="location_permission_denied">Campus Capture will not work without having access to precise location</string>
    <string name="login_welcome_text">Login</string>
...
