<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.github.campus_capture.bootcamp.fragments.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_rules"
        android:name="com.github.campus_capture.bootcamp.fragments.RulesFragment"
        android:label="@string/menu_rules"
        tools:layout="@layout/fragment_rules" />
        
    <fragment
        android:id="@+id/nav_scoreboard"
        android:name="com.github.campus_capture.bootcamp.fragments.ScoreboardFragment"
        android:label="@string/menu_scoreboard"
        tools:layout="@layout/fragment_scoreboard" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.github.campus_capture.bootcamp.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>